# upgrade-uv-lock

./: README.md  pyproject.toml
src/upgrade_uv_lock/: __init__.py
