[project]
name = "upgrade-uv-lock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "David Fokkema", email = "davidfokkema@icloud.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
upgrade-uv-lock = "upgrade_uv_lock:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
